--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,11 @@ blinker==1.9.0; python_version >= '3.9'
 click==8.2.1; python_version >= '3.10'
 flask==3.1.1; python_version >= '3.9'
 flask-cors==6.0.1; python_version >= '3.9' and python_version < '4.0'
+gunicorn==23.0.0; python_version >= '3.7'
 itsdangerous==2.2.0; python_version >= '3.8'
 jinja2==3.1.6; python_version >= '3.7'
 markupsafe==3.0.2; python_version >= '3.9'
+packaging==25.0; python_version >= '3.8'
 psycopg2==2.9.10; python_version >= '3.8'
 python-dotenv==1.1.1; python_version >= '3.9'
 werkzeug==3.1.3; python_version >= '3.9'
